--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/MattStClair/restaurantRiskRating/issues"
   },
-  "homepage": "https://github.com/MattStClair/restaurantRiskRating#readme"
+  "homepage": "https://github.com/MattStClair/restaurantRiskRating#readme",
+  "dependencies": {
+    "express": "^4.15.4",
+    "express-request-proxy": "^2.0.0"
+  }
 }
